# hymod

./: .gitignore  .source_hash  CLAUDE.md  Cargo.toml  LICENSE-TEMPLATES.md  Makefile  README.md  build.rs  index.html
.config/: nextest.toml
.github/scripts/: generate-coverage-table.py  generate-progress-page.sh
.github/workflows/: coverage.yml  release.yml  spec-progress.yml
cli/: Cargo.toml
cli/config/: mod.rs
cli/deploy/: deploy_command.rs  mod.rs
cli/deploy/tests/: test_default_server_deploy_remote.rs  test_default_server_deploy_validates_remote.rs  test_deploy_default_rsync.rs  test_deploy_dry_run.rs  test_deploy_dry_run_with_transport.rs  test_deploy_force_scp.rs  test_deploy_full_pipeline.rs  test_deploy_identity_file.rs  test_deploy_path_arg.rs  test_deploy_remote_path_zip.rs  test_deploy_restart_after_upload.rs  test_deploy_runs_build.rs  test_deploy_runs_restart.rs  test_deploy_ssh_credentials.rs  test_deploy_transport_default_rsync.rs  test_deploy_transport_fallback_scp.rs  test_deploy_transport_rsync_explicit.rs  test_deploy_transport_scp_explicit.rs  test_deploy_uploads_artifact.rs  test_deploy_with_default_server.rs  test_deploy_with_server_name.rs  test_error_invalid_server_config.rs  test_error_invalid_transport.rs  test_error_missing_restart_cmd.rs  test_error_missing_server_no_default.rs  test_error_missing_ssh_details.rs  test_error_restart_fails.rs  test_error_server_is_local.rs  test_error_server_not_found.rs  test_error_ssh_unreachable.rs  test_error_transport_unavailable.rs  test_error_upload_fails.rs  test_transport_default_rsync_available.rs  test_transport_default_scp_fallback.rs  test_transport_override_rsync.rs  test_transport_override_scp.rs
cli/dev/: dev_command.rs  mod.rs
cli/dev/tests/: test_default_server_dev_local.rs  test_default_server_dev_validates_local.rs  test_deploy_to_target.rs  test_dev_default_server_from_config.rs  test_dev_full_pipeline.rs  test_dev_manifest_naming.rs  test_dev_no_default_server_error.rs  test_dev_oneshot_flow.rs  test_dev_override_restart.rs  test_dev_restart_command_from_server_config.rs  test_dev_runs_build.rs  test_dev_runs_link.rs  test_dev_runs_restart.rs  test_dev_watch_mode_init.rs  test_dev_with_default_server.rs  test_dev_with_server_name.rs  test_error_build_fails.rs  test_error_invalid_server_config.rs  test_error_link_fails.rs  (+6 more)
cli/link/: link_command.rs  mod.rs
cli/new/: mod.rs  new_command.rs
cli/server/: mod.rs  server_command.rs
cli/src/: ascii-art.txt  command.rs  main.rs
cli/tests/: build_integration.rs  config_integration.rs  deploy_integration.rs  dev_integration.rs  link_integration.rs  new_integration.rs  server_integration.rs  test_cli_dry_run_flag.rs  test_cli_global_dry_run_flag.rs  test_cli_global_server_flag.rs  test_cli_help.rs  test_cli_unknown_command.rs  test_cli_verbose_flag.rs  test_cli_version.rs  test_e2e_build_to_link.rs  test_e2e_full_dev_loop.rs  test_e2e_new_to_build.rs  test_e2e_new_to_deploy.rs
core/config/: Cargo.toml
core/ops/: Cargo.toml
core/path/: Cargo.toml
core/plan/: Cargo.toml
features/deploy/: Cargo.toml
features/dev/: Cargo.toml
features/link/: Cargo.toml
features/new/: Cargo.toml
features/server/: Cargo.toml
scripts/: bump_version.sh  local_deploy.sh  update_skeleton.sh
testmod_exporter/: gradle.properties  settings.gradle
testmod_relocation/: gradle.properties  settings.gradle
testmod_verification/: gradle.properties  settings.gradle
(+166 files in other folders)
