[package]
name = "hymod"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hymod"
path = "cli/src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
features-new = { path = "features/new" }
features-build = { path = "features/build" }
features-link = { path = "features/link" }
features-dev = { path = "features/dev" }
features-deploy = { path = "features/deploy" }
features-server = { path = "features/server" }
core-plan = { path = "core/plan" }
core-ops = { path = "core/ops" }

[workspace]
resolver = "2"
members = [
  "core/config",
  "core/plan",
  "core/ops",
  "core/path",
  "features/new",
  "features/build",
  "features/link",
  "features/dev",
  "features/deploy",
  "features/server"
]
