[package]
name = "hymod"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "hymod"
path = "cli/src/main.rs"

[[test]]
name = "new_integration"
path = "cli/tests/new_integration.rs"

[[test]]
name = "build_integration"
path = "cli/tests/build_integration.rs"

[[test]]
name = "link_integration"
path = "cli/tests/link_integration.rs"

[[test]]
name = "dev_integration"
path = "cli/tests/dev_integration.rs"

[[test]]
name = "deploy_integration"
path = "cli/tests/deploy_integration.rs"

[[test]]
name = "server_integration"
path = "cli/tests/server_integration.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
features-new = { path = "features/new" }
features-build = { path = "features/build" }
features-link = { path = "features/link" }
features-dev = { path = "features/dev" }
features-deploy = { path = "features/deploy" }
features-server = { path = "features/server" }
core-plan = { path = "core/plan" }
core-ops = { path = "core/ops" }
anyhow = "1.0"

[workspace]
resolver = "2"
members = [
  "core/config",
  "core/plan",
  "core/ops",
  "core/path",
  "features/new",
  "features/build",
  "features/link",
  "features/dev",
  "features/deploy",
  "features/server"
]
